<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="error_message">Error!</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="c">C</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="percentage_15">15%</string>
    <string name="percentage_18">18%</string>
    <string name="percentage_20">20%</string>
    <string name="round">Round</string>
    <string name="calculate">Calculate</string>
</resources>